[package]
name = "lightml"
description = "Parser for XML and HTML"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidawave/lightml"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
