[package]
name = "lightml"
description = "LIGhtweight-HTML parser and with CSS selector interface"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidawave/lightml"
keywords = ["HTML", "parser", "selector"]
categories = ["parsering", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
